--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "minacl-full"]
-	path = minacl-full
-	url = git@github.com:mellowplace/PHP-HTML-Driven-Forms.git
+[submodule "minacl"]
+	path = minacl
+	url = git@github.com:mellowplace/Minacl.git
